<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/appBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_blue_dark"
            android:hapticFeedbackEnabled="false"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            android:verticalScrollbarPosition="right"
            android:visibility="visible"
            app:title="@string/Country_Stats"
            app:titleMargin="4dp"
            app:titleTextColor="#FFFFFF" />

        <TextView
            android:id="@+id/countryName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="250dp"
            android:text="name"
            android:textSize="30sp"
            android:textStyle="bold" />

    </LinearLayout>

    <TableLayout
        android:id="@+id/table"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/deathsTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/TotalDeaths"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/recoveriesTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/TotalRecover"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/casesTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/TotalCases"
                android:textSize="18sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/deathNumbers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/DeathNumbers" />

            <TextView
                android:id="@+id/recoveryNumbers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/RecoveredNumbers" />

            <TextView
                android:id="@+id/casesNumbers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/CaseNumbers" />
        </TableRow>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>